--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       la posizione "umana" (partendo da 1) del cognome dell'utente.
       */
 
-      var list = [];
+      // VERSIONE AVANZATA*
+
+    /*  var list = [];
         alert("Per smettere di inserire cognomi chiudi la pagina o inserisci un cognome con lunghezza inferiore a 1 caratteri!")
         var cognome = prompt("Dimmi il tuo cognome: ");
 
@@ -58,8 +60,32 @@
         list.sort();
         for (var i = 0; i < list.length; i++) {
           console.log("In ordine: ", "posizione:", (i + 1), list[i]);
-        }
+        } */
 
+        // VERSIONE SEMPLICE
+        // var list = ["Marzolla", "Simone", "Caruso", "Monica", "Martina", "Rossi", "Lugli"];
+        // alert("Cognomi con lunghezza inferiore a 1 carattere non sono accettati. Scrivere stop per concludere e vedere la lista dei cognomi ordinata");
+        // var cognome = prompt("Il tuo cognome:");
+        // while((cognome.length > 1) && (cognome != "Stop")) {
+        //   list.push(cognome);
+        //   var cognome = prompt("Il tuo cognome:");
+        // }
+        // list.sort();
+        // for (var i=0; i < list.length; i++) {
+        //   console.log("In ordine:", (i + 1), list[i]);
+        // }
+
+        //VERSIONE GIUSTA
+        var list=["Marzolla", "Simone", "Caruso", "Monica", "Martina", "Rossi", "Lugli"];
+        var cognome = prompt("Dimmi il tuo cognome: ");
+
+        list.push(cognome);
+        list.sort()
+        for(var i=0; i < list.length; i++) {
+          if(list[i] == cognome){
+            console.log("La tua posizione:", i, cognome);
+          }
+        }
     </script>
   </body>
 </html>
