--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         list.sort()
         for(var i=0; i < list.length; i++) {
           if(list[i] == cognome){
-            console.log("La tua posizione:", i, cognome);
+            console.log("La tua posizione:", (i+1), cognome);
           }
         }
     </script>
